# repoconf

./: README.md  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
repoconf/: config.py  main.py
repoconf/repo_config_templates/: requirements-dev.txt.template
test/: test_version.py
