[tool.poetry]
name = "repoconf"
version = "0.1.0"
description = "."
authors = ["Sam Atkins <samatkins@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"
mypy = "^0.740.0"
pylint = "^2.4"
pytest-cov = "^2.8"
black = {version = "^18.3-alpha.0",allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
